--- a/.compilerc
+++ b/.compilerc
@@ -3,14 +3,22 @@
     "development": {
       "application/javascript": {
         "presets": ["es2016-node5", "react"],
+        "plugins": ["transform-class-properties", "transform-async-to-generator", "transform-runtime"],
         "sourceMaps": "inline"
-      }
+      },
+     "text/less": {
+       "dumpLineNumbers": "comments"
+     }
     },
     "production": {
       "application/javascript": {
         "presets": ["es2016-node5", "react"],
+        "plugins": ["transform-class-properties", "transform-async-to-generator", "transform-runtime"],
         "sourceMaps": false
       }
-    }
+    },
+   "text/less": {
+     "dumpLineNumbers": "comments"
+   }
   }
 }
